Fix z-index

--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -845,7 +845,7 @@ h1 {
   height: 100%;
   position: absolute;
   top: 0;
-  z-index: 40;
+  z-index: 10;
 }
 @media screen and (min-width: 768px) {
   .carousel__container {
@@ -1654,7 +1654,7 @@ section {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 130;
+  z-index: 40;
 }
 
 #cookies.show {
@@ -1719,7 +1719,7 @@ section {
 }
 
 .sidebar--expanded {
-  z-index: 200;
+  z-index: 50;
 }
 
 #footer__content {
@@ -1740,7 +1740,6 @@ section {
 /* ====================================================== */
 /* Hamburger Nav Button */
 .hamburger {
-  z-index: 200;
   background-color: #333645;
   border-radius: 3px;
   height: 100%;
@@ -2001,7 +2000,7 @@ section {
 }
 .sidebar__shown .sidebar__overlay {
   background: rgba(0, 0, 0, 0.4);
-  z-index: 110;
+  z-index: 30;
   transition: 0.4s;
 }
 
@@ -2084,7 +2083,7 @@ header {
   background-color: #fff;
   position: relative;
   top: 0;
-  z-index: 101;
+  z-index: 20;
   width: 100%;
 }
 
@@ -2092,7 +2091,7 @@ header {
   position: fixed;
   top: -210px;
   left: 0;
-  z-index: 102;
+  z-index: 21;
 }
 .header--animated {
   transition: 0.4s all;
@@ -2163,7 +2162,6 @@ header {
   width: 100%;
   height: 45px;
   padding: 0 calc((100vw - 970px) / 2);
-  z-index: 70;
 }
 @media screen and (min-width: 1260px) {
   .main-nav__popunder {
@@ -2287,7 +2285,7 @@ header {
 .carousel__nav {
   display: flex;
   justify-content: space-around;
-  z-index: 40;
+  z-index: 10;
   position: absolute;
   bottom: 14px;
   width: 185px;
