--- a/styles/scss/partials/components/_buttons.scss
+++ b/styles/scss/partials/components/_buttons.scss
@@ -5,7 +5,6 @@
 /* Hamburger Nav Button */
 
 .hamburger {
-    z-index: 200;
     background-color: $color-primary;
     border-radius: 3px;
     height: 100%;
