--- a/styles/scss/partials/components/_images.scss
+++ b/styles/scss/partials/components/_images.scss
@@ -26,7 +26,7 @@
 
     &__shown &__overlay {
         background: rgba(0, 0, 0, 0.4);
-        z-index: 110;
+        z-index: 30;
         transition: 0.4s;
     }
 }
