--- a/styles/scss/partials/components/_nav.scss
+++ b/styles/scss/partials/components/_nav.scss
@@ -7,7 +7,7 @@ header {
     background-color: #fff;
     position: relative;
     top: 0;
-    z-index: 101;
+    z-index: 20;
     width: 100%;
 }
 
@@ -17,7 +17,7 @@ header {
         position: fixed;
         top: -210px;
         left: 0;
-        z-index: 102;
+        z-index: 21;
     }
 
     &--animated {
@@ -93,7 +93,6 @@ header {
         width: 100%;
         height: 45px;
         padding: 0 calc((100vw - #{$container-large}) / 2);
-        z-index: 70;
 
         @include xlarge {
             padding: 0 calc((100vw - #{$container-xlarge}) / 2);
@@ -110,7 +109,7 @@ header {
 .carousel__nav {
     display: flex;
     justify-content: space-around;
-    z-index: 40;
+    z-index: 10;
     position: absolute;
     bottom: 14px;
     width: 185px;
