--- a/styles/scss/partials/layout/_containers.scss
+++ b/styles/scss/partials/layout/_containers.scss
@@ -268,7 +268,7 @@
         position: absolute;
         top: 0;
         // left: 2vw;
-        z-index: 40;
+        z-index: 10;
 
         @include medium {
             left: calc((100vw - #{$container-med}) / 2);
