--- a/styles/scss/partials/layout/_sections.scss
+++ b/styles/scss/partials/layout/_sections.scss
@@ -18,7 +18,7 @@ section {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 130;
+    z-index: 40;
 }
 
 #cookies.show {
@@ -83,5 +83,5 @@ section {
 }
 
 .sidebar--expanded {
-    z-index: 200;
+    z-index: 50;
 }
